; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_pcie.c_mtk_pcie_phy_mt7621_bypass_pipe_rst.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_pcie.c_mtk_pcie_phy_mt7621_bypass_pipe_rst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_pci_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtk_pci_softc*, i64)* @mtk_pcie_phy_mt7621_bypass_pipe_rst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtk_pcie_phy_mt7621_bypass_pipe_rst(%struct.mtk_pci_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.mtk_pci_softc*, align 8
  %4 = alloca i64, align 8
  store %struct.mtk_pci_softc* %0, %struct.mtk_pci_softc** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = add nsw i64 %6, 44
  %8 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %5, i64 %7, i32 12, i32 1, i32 1)
  %9 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = add nsw i64 %10, 44
  %12 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %9, i64 %11, i32 4, i32 1, i32 1)
  %13 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = add nsw i64 %14, 300
  %16 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %13, i64 %15, i32 12, i32 1, i32 1)
  %17 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = add nsw i64 %18, 300
  %20 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %17, i64 %19, i32 4, i32 1, i32 1)
  %21 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %22 = load i64, i64* %4, align 8
  %23 = add nsw i64 %22, 4140
  %24 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %21, i64 %23, i32 12, i32 1, i32 1)
  %25 = load %struct.mtk_pci_softc*, %struct.mtk_pci_softc** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = add nsw i64 %26, 4140
  %28 = call i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc* %25, i64 %27, i32 4, i32 1, i32 1)
  ret void
}

declare dso_local i32 @mtk_pcie_phy_set(%struct.mtk_pci_softc*, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
